--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,6 @@
   <section class="footer__statistics">
   </section>
 </footer>
-<script src="../src/main.js"></script>
+<script src="./bundle.js"></script>
 </body>
 </html>
